--- a/bai11_web_service_&_RESTfull/thuc_hanh/customer_RESTfull/src/main/resources/application.properties
+++ b/bai11_web_service_&_RESTfull/thuc_hanh/customer_RESTfull/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/demo_spring?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_spring
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_spring_boot
 spring.datasource.username=root
 spring.datasource.password=12345678
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
